Bugzilla bug #37761: changed open file to correctly handle PR_TRUNCATE | PR_CREATE_FILE and also fixed _PR_MD_SET_FD_INHERITABLE. Thanks to Skip Nizinski <snizinsk@us.ibm.com> of IBM Corporation for the patch.